# Gestion_de_Produits_Epargne

./: Seance_1.ipynb  main.py  pyproject.toml
src/gpe/: core.py  utils.py
src/gpe/data/: epargnes.csv  personnes.txt
src/gpe/models/: epargne.py  personne.py  resultat.py
tests/gpe/: test_core.py  test_utils.py
tests/gpe/models/: test_epargne.py  test_personne.py
