[project]
name = "gpe"
version = "0.1.0"
description = "Un projet Python structuré proprement"
authors = [
    { name = "Anselin Ludovic", email = "ludovicanselin@gmail.com" }
]
dependencies = [
    "pandas>=2.0",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
